--- a/HTML/grid.css
+++ b/HTML/grid.css
@@ -88,6 +88,138 @@ grid-template-rows: repeat(3,125px);
 
 #gblack{
     background-color: black;
+    grid-column: 1 / -1;
+    grid-row: 1 / 1;
+}
+
+#gred{
+    background-color: red;
+    grid-column: 1 / -1;
+    grid-row: 2 / 3;
+}
+
+#gyellow{
+    background-color: yellow;
+    grid-column: 1 / -1;
+    grid-row: 3 / 4;
+}
+
+#Belgium{
+margin: 50px;
+height: 500px;
+width: 700px;
+display: grid;
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-rows: repeat(3,125px);
+}
+
+#bblack{
+    background-color: black;
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+}
+
+#bred{
+    background-color: red;
+    grid-column: 2 / 3;
+    grid-row: 1 / -1;
+}
+
+#byellow{
+    background-color: yellow;
     grid-column: 3 / 4;
     grid-row: 1 / -1;
 }
+
+#Thailand{
+    margin: 50px;
+    height: 300px;
+    width: 400px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 50px 50px 100px 50px 50px;
+    }
+    
+    #tred{
+        background-color: red;
+        grid-column: 1 / -1;
+        grid-row: 1 / -1;
+    }
+    
+    #twhite{
+        background-color: white;
+        grid-column: 1 / -1;
+        grid-row:  2/3  ;
+    }
+    
+    #tblue{
+        background-color: blue;
+        grid-column:  1 / -1 ;
+        grid-row: 3 / 4 ;
+    }
+
+    #twhite2{
+        background-color: white;
+        grid-column: 1 / -1;
+        grid-row:  4/5 ;
+    }
+    
+    #Switzerland{
+        margin: 50px;
+        height: 500px;
+        width: 700px;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
+        grid-template-rows: repeat(3,125px);
+        }
+
+        #sred{
+            background-color: red;
+            grid-column:  1 / -1 ;
+            grid-row: 1 / -1 ;
+        }
+        
+        #swhite{
+            background-color: white;
+            grid-column:  2 / 5 ;
+            grid-row: 2 / 2 ;
+        }
+
+        #swhite2{
+            background-color: white;
+            grid-column:  3 /4  ;
+            grid-row:  1/ 4 ;
+        }
+
+        #United Arab Emirates{
+            margin: 50px;
+            height: 500px;
+            width: 700px;
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: repeat(3,125px);
+            }
+            
+            #ublack{
+                background-color: black;
+                grid-column: 1 / -1;
+                grid-row: 1 / 1;
+            }
+            
+            #ured{
+                background-color: red;
+                grid-column: 1 / -1;
+                grid-row: 2 / 3;
+            }
+            
+            #ugreen{
+                background-color: green;
+                grid-column: 1 / -1;
+                grid-row: 3 / 4;
+            }
+
+            #uwhite{
+                background-color: white;
+                grid-column: 1 / -1;
+                grid-row: 3 / 4;
+            }
