--- a/HTML/grid.css
+++ b/HTML/grid.css
@@ -170,7 +170,7 @@ grid-template-rows: repeat(3,125px);
         width: 700px;
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr ;
-        grid-template-rows: repeat(3,125px);
+        grid-template-rows: repeat(5,1fr);
         }
 
         #sred{
@@ -182,44 +182,72 @@ grid-template-rows: repeat(3,125px);
         #swhite{
             background-color: white;
             grid-column:  2 / 5 ;
-            grid-row: 2 / 2 ;
+            grid-row: 3 / 4 ;
         }
 
         #swhite2{
             background-color: white;
-            grid-column:  3 /4  ;
-            grid-row:  1/ 4 ;
+            grid-column:  3 / 4  ;
+            grid-row:  2 / 5 ;
         }
 
-        #United Arab Emirates{
+        #United-Arab-Emirates{
             margin: 50px;
             height: 500px;
             width: 700px;
             display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-columns: 1fr 1fr 1fr ;
             grid-template-rows: repeat(3,125px);
+            }
+
+              
+            #ured{
+                background-color: red;
+                grid-column: 1 / 2;
+                grid-row:  1 / -1;
             }
             
             #ublack{
                 background-color: black;
                 grid-column: 1 / -1;
-                grid-row: 1 / 1;
-            }
-            
-            #ured{
-                background-color: red;
-                grid-column: 1 / -1;
-                grid-row: 2 / 3;
+                grid-row: 1 / -1;
             }
             
             #ugreen{
                 background-color: green;
                 grid-column: 1 / -1;
-                grid-row: 3 / 4;
+                grid-row: 1 / 2;
             }
 
             #uwhite{
                 background-color: white;
                 grid-column: 1 / -1;
-                grid-row: 3 / 4;
+                grid-row: 2 / 3;
             }
+
+            #sweden{
+                margin: 50px;
+                height: 500px;
+                width: 700px;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+                grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+                }
+
+                #swblue{
+                    background-color: blue;
+                    grid-column:  1 / -1 ;
+                    grid-row: 1 / -1 ;
+                }
+                
+                #swyellow{
+                    background-color: yellow;
+                    grid-column:  1 / -1 ;
+                    grid-row: 3 / 4 ;
+                }
+        
+                #swyellow2{
+                    background-color: yellow;
+                    grid-column:  3 / 4  ;
+                    grid-row:  1 / -1 ;
+                }
